--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^7.0.1",
     "@angular/service-worker": "^7.0.1",
     "core-js": "^2.5.4",
-    "ng-zorro-antd": "^1.6.0",
+    "moment": "^2.23.0",
+    "ng-zorro-antd": "^1.8.0",
     "ngx-pipes": "^2.3.5",
     "rxjs": "^6.0.0",
+    "tachyons": "^4.10.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -39,9 +41,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "https-proxy-agent": "^2.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
